<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search">Search</string>
    <string name="search_hint">Type city here…</string>
    <string name="check_your_connection">Server could not be reached. Please check your connection.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry_button">Retry</string>
    <string name="prishtina">Prishtina</string>
    <string name="weather">Weather</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="failed_please_retry">Failed to load data. Retry!</string>
    <string name="unknown">Unknown</string>
    <string name="max">MAX</string>
    <string name="please_allow_location_permission">Please allow location permission!</string>
    <string name="services_not_available">Google Services are not available! App doesn\'t work as expected.</string>
    <string name="enable_location_to_continue">Please enable location to continue!</string>
</resources>