<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/city"
        style="@style/CityTitleStyle"
        tools:text="@string/prishtina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherConditions"
        style="@style/WeatherConditionStyle"
        tools:text="Sunny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weather"
        android:layout_marginTop="@dimen/space_64"
        android:src="@drawable/ic_cloudy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherConditions" />

    <TextView
        android:id="@+id/temperature"
        style="@style/TemperatureStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="@+id/weatherIcon"
        app:layout_constraintStart_toStartOf="@+id/weatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
        tools:text="24°" />

    <ImageView
        android:id="@+id/visibilityIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_64"
        android:contentDescription="@string/visibility"
        android:src="@drawable/ic_visibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/humidityIcon"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/visibility"
        style="@style/OtherValuesStyle"
        tools:text="11%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintEnd_toEndOf="@+id/visibilityIcon"
        app:layout_constraintStart_toStartOf="@+id/visibilityIcon"
        app:layout_constraintTop_toBottomOf="@+id/visibilityIcon" />

    <ImageView
        android:id="@+id/humidityIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_64"
        android:contentDescription="@string/humidity"
        android:src="@drawable/ic_humidity"
        app:layout_constraintEnd_toStartOf="@+id/visibilityIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/windIcon"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/humidityValue"
        style="@style/OtherValuesStyle"
        tools:text="22%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintEnd_toEndOf="@+id/humidityIcon"
        app:layout_constraintStart_toStartOf="@+id/humidityIcon"
        app:layout_constraintTop_toBottomOf="@+id/humidityIcon" />

    <ImageView
        android:id="@+id/windIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_64"
        android:contentDescription="@string/wind"
        android:src="@drawable/ic_wind"
        app:layout_constraintEnd_toStartOf="@+id/humidityIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/windValue"
        style="@style/OtherValuesStyle"
        tools:text="1.5 m/s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintEnd_toEndOf="@+id/windIcon"
        app:layout_constraintStart_toStartOf="@+id/windIcon"
        app:layout_constraintTop_toBottomOf="@+id/windIcon" />
</androidx.constraintlayout.widget.ConstraintLayout>